feat(BE): updated review fetching speed